--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="the personal website of transmissions11" />
+  <meta name="description" content="the personal website of Sabnock01" />
 
   <title>Sabnock</title>
 
@@ -24,8 +24,8 @@
 
   <div>
     <p style="text-align: center">
-      <b>Currently Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall</a> and <a href="https://twitter.com/curta_ctf">Curta CTF</a>.
-       JSR at <a href="https://twitter.com/SpearbitDAO">Spearbit.</a> Formerly Smart Contract engineer at <a href="https://x.com/yield">Yield Protocol</a></b>.
+      <b>Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall</a> and <a href="https://twitter.com/curta_ctf">Curta CTF</a>.
+       JSR at <a href="https://twitter.com/SpearbitDAO">Spearbit.</a> Previously Smart Contract engineer at <a href="https://x.com/yield">Yield Protocol</a></b>.
     </p>
 
    <div>
@@ -55,7 +55,7 @@
       <ul>
         <li><a href="https://sabnock.substack.com/p/take-your-solidity-testing-to-the">Solidity testing using state patterns
             in Foundry</a></li>
-        <li><a href="https://www.youtube.com/watch?v=tPRX9maJhEE&pp=ygURb3BlbnNlbnNlIHNhYm5vY2s%3D">Smart Contract test
+        <li><a href="https://www.youtube.com/watch?v=tPRX9maJhEE&pp=ygURb3BlbnNlbnNlIHNhYm5vY2s%3D">Smart contract test
             harnesses</a></li>
       </ul>
     </div>
