--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div>
     <p style="text-align: center">
-      <b>Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall</a> and <a href="https://twitter.com/curta_ctf">Curta CTF</a>.
+      <b>Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall</a>.
        JSR at <a href="https://twitter.com/SpearbitDAO">Spearbit.</a> Previously Smart Contract engineer at <a href="https://x.com/yield">Yield Protocol</a></b>.
     </p>
 
@@ -55,8 +55,6 @@
       <ul>
         <li><a href="https://sabnock.substack.com/p/take-your-solidity-testing-to-the">Solidity testing using state patterns
             in Foundry</a></li>
-        <li><a href="https://www.youtube.com/watch?v=tPRX9maJhEE&pp=ygURb3BlbnNlbnNlIHNhYm5vY2s%3D">Smart contract test
-            harnesses</a></li>
       </ul>
     </div>
    </div>
