--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
   <div>
     <p style="text-align: center">
-      <b>Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall</a>.
-       JSR at <a href="https://twitter.com/SpearbitDAO">Spearbit.</a> Previously Smart Contract engineer at <a href="https://x.com/yield">Yield Protocol</a></b>.
+      <b>Protocol Lead at <a href="https://twitter.com/waterfall_mkt">Waterfall Market</a>.</b>
+      <b>Junior Security Researcher at <a href="https://twitter.com/SpearbitDAO">Spearbit</a>.</b>
+      <b>Previously Smart Contract engineer at <a href="https://x.com/yield">Yield Protocol</a>.</b>
     </p>
 
    <div>
