--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="the personal website of Sabnock01" />
 
-  <title>Sabnock</title>
+  <title>Sabnock01's site</title>
 
   <link rel="stylesheet" href="styles.css" />
  </head>
